--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "jest": "^30.0.5",
-    "supertest": "^7.1.1"
+    "supertest": "^7.1.1",
+    "test:unit": "jest tests/unit",
+    "test:integration": "jest tests/integration"
   }
 }
