--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -20,15 +20,15 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        working-directory: ./backend
+        working-directory: backend
         run: npm install
 
       - name: Run unit tests
-        working-directory: ./backend
+        working-directory: backend
         run: npm run test:unit
 
       - name: Start backend server
-        working-directory: ./backend
+        working-directory: backend
         run: npm start &
 
       - name: Wait for server to be ready
@@ -44,5 +44,5 @@ jobs:
         shell: bash
 
       - name: Run integration tests
-        working-directory: ./backend
+        working-directory: backend
         run: npm run test:integration
