--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -1,18 +1,17 @@
-name: Backend CI/CD Set Up
+name: Run Backend Tests
 
 on:
   push:
-    branches: [main]
+    branches: [main, master]
   pull_request:
-    branches: [main]
+    branches: [main, master]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Use Node.js 18
         uses: actions/setup-node@v3
@@ -20,15 +19,15 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        working-directory: backend
+        working-directory: ./Backend
         run: npm install
 
       - name: Run unit tests
-        working-directory: backend
+        working-directory: ./Backend
         run: npm run test:unit
 
       - name: Start backend server
-        working-directory: backend
+        working-directory: ./Backend
         run: npm start &
 
       - name: Wait for server to be ready
@@ -44,5 +43,5 @@ jobs:
         shell: bash
 
       - name: Run integration tests
-        working-directory: backend
+        working-directory: ./Backend
         run: npm run test:integration
