--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,11 +18,14 @@
     "cors": "^2.8.5",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.0.0",
     "nodemon": "^3.1.10",
     "nodeom": "^0.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "jest": "^30.0.5",
     "supertest": "^7.1.1"
   }
