--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,10 +18,10 @@
     "cors": "^2.8.5",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.0.0",
     "nodemon": "^3.1.10",
     "nodeom": "^0.0.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "mongoose": "^7.0.0"
   },
   "devDependencies": {
     "dotenv": "^17.2.1",
