--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,15 +18,15 @@
     "cors": "^2.8.5",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.10",
+    "mongoose": "^7.0.0",
     "nodeom": "^0.0.1",
-    "uuid": "^11.1.0",
-    "mongoose": "^7.0.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jest": "^30.0.5",
+    "nodemon": "^3.1.10",
     "supertest": "^7.1.1"
   }
 }
