--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon app.js",
     "test": "jest --coverage",
     "test:unit": "jest tests/unit",
-    "test:integration": "jest tests/integration"
+    "test:integration": "jest tests/integration --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +25,7 @@
   "devDependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "jest": "^30.0.5",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.1"
   }
