--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,10 +23,12 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
-    "supertest": "^7.1.1"
+    "supertest": "^7.1.1",
+    "typescript": "^5.9.2"
   }
 }
