--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^5.0.3",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "firebase-admin": "^13.5.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.1",
