chore: remove sensitive files and add to gitignore

--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,4 +1,5 @@
 node_modules
 Backend/.env
 .env
-Backend/configs/serviceAccountKey.json
+Backend/configs/serviceAccountKey.jsonBackend/configs/serviceAccountKey.json
+Backend/.env
