--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,9 +25,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -57,7 +57,9 @@
     "@babel/core": "^7.28.0",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.28.0",
+    "@craco/craco": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "prettier": "^3.6.2",
     "react-redux": "^9.2.0"
   }
 }
