--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.17.1",
     "@mui/joy": "^5.0.0-beta.52",
+    "@mui/lab": "^5.0.0-alpha.125",
     "@mui/material": "^5.18.0",
     "@mui/system": "^5.18.0",
     "@mui/x-date-pickers": "^5.0.20",
