--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,6 +28,7 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
     "jest": "^29.7.0",
+    "mockingoose": "^2.16.2",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.1",
     "typescript": "^5.9.2"
