--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.0",
+    "newrelic": "^13.4.0",
     "nodeom": "^0.0.1",
     "uuid": "^11.1.0"
   },
@@ -31,6 +32,7 @@
     "mockingoose": "^2.16.2",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.1",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "winston": "^3.18.3"
   }
 }
